--- a/replace/r56_parties_l_english.yml
+++ b/replace/r56_parties_l_english.yml
@@ -1,59 +1,59 @@
-﻿l_english:
-
+l_english:
+ 
  #NEW
- corporatism:0 "Corporatism"
- corporatism_desc:0 "According to Corporatist ideology, workers and employers would be organized into industrial and professional corporations that represent their interests at the state level. Corporatism has basic democracy, but the people are heavily seperated from the leaders of the country through several layers of hierarchy."
- centrism_democratic:0 "Democratic Centrism"
- centrism_democratic_desc:0 "Centrism is a form of government which wants to achieve common sense solutions that appropriately address current and future needs, that support the public trust and serve the common good with consideration of risk and capacity in context of these needs."
+ corporatism:0 "조합주의"
+ corporatism_desc:0 "조합주의의 이념에 따르면, 노동자와 직원은 모두 자신들의 요구 사항을 국가에 요구할 수 있는 산업적이고 전문적인 조합을 조직해야 합니다. 조합주의에는 기본적인 민주주의 체제가 있지만, 일반 사람들은 여러 계급 분리를 통해 국가의 지도층과 엄격히 분리되어 있습니다."
+ centrism_democratic:0 "민주집중주의"
+ centrism_democratic_desc:0 "집중주의는 위험 정도와 능력을 고려하여 공공선을 실천하고 자선을 지지하는 현재 및 미래의 요구에 대해 상식적인 해결책을 제시하고자 하는 정부의 한 형태입니다."
 
  #FIXES
- neutrality:0 "Authoritarianism"
- neutrality_noun:0 "Authoritarian"
- neutrality_desc:0 "Authoritarian Regime"
- despotism:0 "Despotism"
- despotism_desc:0 "Despotism is a form of government in which a single person rules with absolute power."
- oligarchism:0 "Oligarchism"
- oligarchism_desc:0 "Oligarchism is a form of government in which a group of people rule with absolute power."
+ neutrality:0 "권위주의"
+ neutrality_noun:0 "권위주의"
+ neutrality_desc:0 "권위주의 정권"
+ despotism:0 "전제정치"
+ despotism_desc:0 "전제정치는 한 사람이 절대 권력을 휘두르는 정부 형태입니다."
+ oligarchism:0 "과두정"
+ oligarchism_desc:0 "올리가르히즘은 소수의 사람이 절대 권력을 휘두르는 정부 형태입니다."
 
  #ALB
- ALB_neutrality_party:0 "Constitutionalists"
- ALB_neutrality_party_long:0 "Constitutionalists"
- ALB_communism_party:0 "Çeta e Pezësa"
- ALB_communism_party_long:0 "Çeta e Pezës"
- ALB_democratic_party:0 "Partia e Popullit"
- ALB_democratic_party_long:0 "Partia e Popullit"
- ALB_fascism_party:0 "Absolutists"
- ALB_fascism_party_long:0 "Absolutists"
+ ALB_neutrality_party:0 "입헌주의자"
+ ALB_neutrality_party_long:0 "입헌주의자"
+ ALB_communism_party:0 "체타 에 페저스"
+ ALB_communism_party_long:0 "체타 에 페저스"
+ ALB_democratic_party:0 "인민당"
+ ALB_democratic_party_long:0 "인민당"
+ ALB_fascism_party:0 "전제주의자"
+ ALB_fascism_party_long:0 "전제주의자"
 
  #ARG
  ARG_democratic_party:0 "UCR"
- ARG_democratic_party_long:0 "Unión Cívica Radical"
+ ARG_democratic_party_long:0 "급진시민연합"
  ARG_fascism_party:0 "UNF"
- ARG_fascism_party_long:0 "Union Nacional Fascista"
+ ARG_fascism_party_long:0 "국가 파시즘 연합"
  ARG_communism_party:0 "PC"
- ARG_communism_party_long:0 "Partido Comunista de la Argentina"
- ARG_neutrality_party:0 "Concordancia"
- ARG_neutrality_party_long:0 "Concordancia"
+ ARG_communism_party_long:0 "아르헨티나 사회당"
+ ARG_neutrality_party:0 "합치당"
+ ARG_neutrality_party_long:0 "합치당"
 
  #AUS
  AUS_communism_party:0 "KPÖ"
- AUS_communism_party_long:0 "Kommunistische Partei Österreichs"
+ AUS_communism_party_long:0 "오스트리아 공산당"
  AUS_democratic_party:0 "SDAPÖ"
- AUS_democratic_party_long:0 "Sozialdemokratische Partei Österreichs"
- AUS_fascism_party:1 "Vaterländische Front"
- AUS_neutrality_party:1 "House of Habsburg"
- AUS_neutrality_party_long:1 "House of Habsburg"
+ AUS_democratic_party_long:0 "오스트리아 사회민주당"
+ AUS_fascism_party:1 "조국전선"
+ AUS_neutrality_party:1 "합스부르크 왕가"
+ AUS_neutrality_party_long:1 "합스부르크 왕가"
 
  #BEL
  BEL_communism_party:0 " PCB/PKB"
- BEL_communism_party_long:0 " Parti communiste de Belgique/Kommunistische Partij van België"
+ BEL_communism_party_long:0 "벨기에 사회당"
  BEL_democratic_party:0 " PCS/KVV - PL/LP - POB/BWP"
- BEL_democratic_party_long:0 " Parti Catholique Social/Katholieke Vlaamse Volkspartij - Parti Libéral/Liberale Partij - Parti Ouvrier Belge/Belgische Werkliedenpartij"
- BEL_neutrality_party:0 "Leopoldists"
- BEL_fascism_party:0 " Rex - Verdinaso"
- BEL_fascism_party_long:0 " Parti Rexiste - Verbond der Dietsche Nationaal-Solidaristen"
- BELverdinaso_party:0 "Verdinaso - Rex"
- BELverdinaso_party_long:0 "Verbond der Dietsche Nationaal-Solidaristen - Parti Rexiste"
+ BEL_democratic_party_long:0 " 가톨릭 사회당 - 자유당 -  벨기에 노동당"
+ BEL_neutrality_party:0 "레오폴 왕가"
+ BEL_fascism_party:0 " 렉시스트 - 페르디나소"
+ BEL_fascism_party_long:0 "렉시스트당 - 벨기에 사회연대주의 연합"
+ BELverdinaso_party:0 "페르디나소 - 렉시스트"
+ BELverdinaso_party_long:0 "벨기에 사회연대주의 연합 - 렉시스트당"
 
  #BOL
  BOL_democratic_party:0 "PL"
