--- a/SPR_l_english.yml
+++ b/SPR_l_english.yml
@@ -8,18 +8,18 @@ l_english:
 altos_hornos:0 "알토스 오르노스 데 비스카야"
 telefonica:0 "텔레포니카"
 campsa:0 "CAMPSA"
-compania_espanola_petroleos:0 "콤파니아 에스파뇰라 데 페트롤레오스"
+compania_espanola_petroleos:0 "에스파냐 석유회사"
 astra_unceta:0 "아스트라 운세타 이 시아"
 llama_gabilondo:0 "야마-가빌론도 이 시아"
 star_bonifacio:0 "스타르 보니파시오 에체베리아"
 esperanza_cia:0 "에스페란사 이 시아"
-fabrica_de_armas_trubia:0 "파브리카 데 아르마스 데 트루비아"
+fabrica_de_armas_trubia:0 "트루비아 조병창"
 abadal_buick:0 "아바달-부이크"
 irizar:0 "이리자르"
-compania_auxiliar_ferrocarriles:0 "콤파니아 아욱실리아르 데 페로카릴레스"
+compania_auxiliar_ferrocarriles:0 "건설 & 기타 철도공사"
 hispano_suiza:0 "이스파노-수이사"
-casa:0 "콘스트룩시오네스 아에로나우티카스 S.A."
+casa:0 "C.A.S.A."
 aeronautica_industrial_sa:0 "아에로나우티카 인두스트리알 S.A."
 hispano_aviacion:0 "이스파노 아비아시온"
-secn:0 "소시에다드 에스파뇰라 데 콘스트룩시온 나발"
+secn:0 "에스파냐 해군조병창"
 euskalduna:0 "에우스칼두나"
