--- a/CZE_l_english.yml
+++ b/CZE_l_english.yml
@@ -47,7 +47,7 @@
   new_blackops_effect:0 "\n 흑색작전:"
 
       tgm:0 "토마시 가리크 마사리크 (1대 대통령)"
-      tgm_desc:0 "토마시 가리크 마사리크는 체코슬로바키아의 정치인이었고 사회학자,철학자였습니다. 제 1차세계대전 당시 체코슬로바키아의 독립을 간절히 원하였고 체코슬로바키아의 제 1대 대통령이 되었습니다.\n\n마사리크는 1920년 5월에 당선,1927년,1934년에도 재선하여 3번 대통령이 되었습니다.그는 나이와 건강상의 이유로 1935년 사직했습니다. 그리고 그의 후배인 에드바르트 베네시가 그의 뒤를 이었습니다."  
+      tgm_desc:0 "토마시 가리크 마사리크는 체코슬로바키아의 정치인이었고 사회학자,철학자였습니다. 제 1차세계대전 당시 체코슬로바키아의 독립을 간절히 원하였고 체코슬로바키아의 제 1대 대통령이 되었습니다.\n\n마사리크는 1920년 5월에 당선,1927년,1934년에도 재선하여 3번 대통령이 되었습니다.그는 나이와 건강상의 이유로 1935년 사직하였고 그의 후배인 에드바르트 베네시가 그의 뒤를 이었습니다."  
       edvard_benes:0 "에드바르트 베네시 (2대 대통령)"
       edvard_benes_desc:0 "전 외무장관이면서 체코슬로바키아 국가사회당의 주요인사인 에드바르트 베네시는, 1935년 뒤 토마시 가리크 마사리크가 사퇴한뒤 당선되었습니다.\n\n베네시는 첫번째이자 가장 오래 활동한 체코슬로바키아의 외무부 장관으로,베르사유 조약의 협상에서 체코슬로바키아의 대표로 있던 시절부터 10개의 정부를 거쳐왔습니다. 그는 국제회의에서 유명하고 영향력 있는 인물이었으며, 1923년부터 1927년 동안 국제연맹의 의원이기도 했습니다."
       CZKE_jan_rys_rozsevac:0 "얀리스 로즈 세박"
@@ -58,23 +58,23 @@
       CZKE_milan_hodza_advisor_desc:0 "밀란 호자는 슬로바키아 출신의 유명한 정치인이면서 저널리스트 입니다.1935년부터 1938년까지 체코슬로바키아의 수상이었습니다.\n\n지역 통합의 지지자 로써,그는 중앙 유럽의 민주 연합을 설립하려는 시도로 더 유명했습니다."
 
     czke.1.t:0 "주데텐란트의 문제"
-    czke.1.d:0 "독일의 라인란트 점령과 함께, 주데텐란트 지역의 독일인들은 날이 갈수록 불안해지고 있습니다. 비록 주데텐 독일당(SdP)의 지도자 콘라드 하인레인은, 체코슬로바키아의 독일인들은 독일 국가사회주의에 그들 스스로 거리를 두고있다고 말하며 체코슬로바키아 정부를 안심시켰지만, 보고서에는 다르게 말하고 있습니다.\n\nThe right of self-determination for Sudenland Germans, pan-germanism and even open sympathy for the ideals of National Socialism is more than common occurrence in SDP political rallies."
+    czke.1.d:0 "독일의 라인란트 점령과 함께, 주데텐란트 지역의 독일인들은 날이 갈수록 불안해지고 있습니다. 비록 주데텐 독일당(SdP)의 지도자 콘라드 하인레인은, 체코슬로바키아의 독일인들은 독일 국가사회주의에 그들 스스로 거리를 두고있다고 말하며 체코슬로바키아 정부를 안심시켰지만, 보고서에는 다르게 말하고 있습니다.\n\n주테텐란트의 독일인에 대한 민족 자결권, 범독일주의, 심지어 국가사회주의의 이상에 대한 지지까지도 SDP 정치집회에서 흔히 일어나는 일입니다."
     czke.1.a:0 "걱정마라.단순히 정치적 포퓰리즘 일 뿐이야."
       CZKE_unruly_minorities:0 "주데텐란트 문제"
       CZKE_unruly_minorities_desc:0 "체코슬로바키아는 옛 오스트리아-헝가리 제국의 일부에서 만들어진 다민족 국가였으며 체코인들와 슬로바키아인들를 제외하고 많은 독일인, 헝가리인, 유태인, 루신인들이 거주하고 있었습니다.\n\n대공황의 여파와 유럽에서 대두되는 파시즘은 이 신생국, 특히 히틀러의 범독일주의 사상에 현혹된 게르만족에게 심각한 문제를 만들어냅니다."
     czke.2.t:0 "토마시 가리크 마사리크의 장례식"
-    czke.2.d:0 "온도시가 애도에 빠진 프라하에서, 시내 건물에서 검은 깃발이 펄럭였습니다. 독특하고 모호한 하얀 콧수염을 가진 마시리크의 흉상과 사진이 온 마을을 뒤덮고 수많은 신문들의 1면을 장식했습니다.\n\n"TGM"이라고 쓰인 검은 현수막들이 성 비투스 대성당과 웬세슬라스 광장에 있는 건물들을 장식하였으며, 수천명의 군인들과 군단들이 그의 장례식을따라 행진하며 [GetDateText] 146개의 군사규격이 등장했습니다. 체코슬로바키아 국기를 두른 채로, 그의 관은 포가에 실려 도시를 지나갔습니다. 라니로 가는 마지막 다리 위에서, 관은 기차 안의 화환과 꽃으로 뒤덮인 차 안에 놓여서 이동했습니다.\n\nTomáš Garrigue Masaryk was a Czechoslovak politician, sociologist and philosopher, who as an eager advocate of Czechoslovak independence during World War I became the founder and first President of Czechoslovakia and was re-elected as president three times. He resigned from office in 1935 on the grounds of old age and poor health, and Edvard Beneš succeeded him."
+    czke.2.d:0 "온도시가 애도에 빠진 프라하에서, 시내 건물에서 검은 깃발이 펄럭였습니다. 독특하고 모호한 하얀 콧수염을 가진 마시리크의 흉상과 사진이 온 마을을 뒤덮고 수많은 신문들의 1면을 장식했습니다.\n\n"TGM"이라고 쓰인 검은 현수막들이 성 비투스 대성당과 웬세슬라스 광장에 있는 건물들을 장식하였으며, 수천명의 군인들과 군단들이 그의 장례식을따라 행진하며 [GetDateText] 146개의 군사규격이 등장했습니다. 체코슬로바키아 국기를 두른 채로, 그의 관은 포가에 실려 도시를 지나갔습니다. 라니로 가는 마지막 다리 위에서, 관은 기차 안의 화환과 꽃으로 뒤덮인 차 안에 놓여서 이동했습니다.\n\n토마시 가리크 마사리크는 체코슬로바키아의 정치인이었고 사회학자,철학자였습니다. 제 1차세계대전 당시 체코슬로바키아의 독립을 간절히 원하였고 체코슬로바키아의 제 1대 대통령이 되었습니다. 마사리크는 1920년 5월에 당선,1927년,1934년에도 재선하여 3번 대통령이 되었습니다.그는 나이와 건강상의 이유로 1935년 사직하였고 그의 후배인 에드바르트 베네시가 그의 뒤를 이었습니다."
     czke.2.a:0 "체코슬로바키아의 슬픈날이다."
     czke.3.t:0 "전 체코슬로바키아 대통령의 죽음"
-    czke.3.d:0 "In Prague, a city in mourning, black flags fluttered from downtown buildings. Busts and pictures of Masaryk with that distinctive, fluffy, white moustache dotted the town and covered the front pages of numerous newspapers.\n\nBlack banners reading “TGM” adorned Saint Vitus Cathedral and buildings on Wenceslas Square. Thousands of soldiers and legionnaires marched in his funeral procession [GetDateText] as 146 military standards made an appearance. Draped with the Czechoslovak flag, his coffin was carried on a gun carriage through the city. On its last leg to Lány, the coffin traveled by train, placed in a car covered in wreaths and flowers."
+    czke.3.d:0 "온도시가 애도에 빠진 프라하에서, 시내 건물에서 검은 깃발이 펄럭였습니다. 독특하고 모호한 하얀 콧수염을 가진 마시리크의 흉상과 사진이 온 마을을 뒤덮고 수많은 신문들의 1면을 장식했습니다.\n\n"TGM"이라고 쓰인 검은 현수막들이 성 비투스 대성당과 웬세슬라스 광장에 있는 건물들을 장식하였으며, 수천명의 군인들과 군단들이 그의 장례식을따라 행진하며 [GetDateText] 146개의 군사규격이 등장했습니다. 체코슬로바키아 국기를 두른 채로, 그의 관은 포가에 실려 도시를 지나갔습니다. 라니로 가는 마지막 다리 위에서, 관은 기차 안의 화환과 꽃으로 뒤덮인 차 안에 놓여서 이동했습니다.\n\n토마시 가리크 마사리크는 체코슬로바키아의 정치인이었고 사회학자,철학자였습니다. 제 1차세계대전 당시 체코슬로바키아의 독립을 간절히 원하였고 체코슬로바키아의 제 1대 대통령이 되었습니다. 마사리크는 1920년 5월에 당선,1927년,1934년에도 재선하여 3번 대통령이 되었습니다.그는 나이와 건강상의 이유로 1935년 사직하였고 그의 후배인 에드바르트 베네시가 그의 뒤를 이었습니다."
     czke.3.a:0 "체코슬로바키아의 슬픈날이군."
     czke.3.b:0 "신경써야할 자본주의자가 하나 줄었다."
     czke.3.c:0 "마침내, 늙은 염소가 죽은것인가!"
-    czke.4.t:0 "SdP가 카를로비바리 프로그램을 선언하다"
-    czke.4.d:0 "On [GetDateText] the SdP proclaimed the "Karlsbader Program", which demanded in eight points the complete equality between the Sudeten Germans and the Czech people, including autonomy in regions occupied by ethnic-Germans.\n\nThe Prague government initially refused, claiming that some points were simply unrealizable, but under the pressure of the United Kingdom (Lord Runciman Mission) eventually agreed to the majority of the demands presented by Henlein's party. However, the Germans were not satisfied by this and additional, mainly unacceptable or unrealizable, demands were made to further escalate the situation and create international pressure on Czechoslovakia, which eventually resulted in the Munich Conference."
+    czke.4.t:0 "SdP가 칼스바트 프로그램을 선언하다"
+    czke.4.d:0 "[GetDateText] 주데텐 독일당은 "칼스바트 프로그램"을 발표했는데, 이 프로그램은 8가지 사항에서 주데텐란튿의 독일인과 체코인들 사이에 게르만족이 점령한 지역의 자치권을 포함한 완전한 평등을 요구했습니다.\n\n프라하 정부는 처음에는 일부 사항이 단순히 실현 불가능하다고 주장하면서 거절했지만, 영국의 압력(런시먼 경 작전)으로 결국 하인레인 일당이 제시한 대다수의 사항에 동의했습니다. 그러나, 독일인들은 이것에 만족하지 않았고, 주로 받아들일 수 없거나 실현 불가능한 추가적인 사항을 만들어 상황을 더욱 악화시키고 체코슬로바키아에 대한 국제적인 압력을 만들도록 하여 결국 뮌헨 협정으로 이어졌습니다."
     czke.4.a:0 "우린 뭔가를 해야만해..."
       CZKE_unruly_minorities_2:0 "주데텐란트 위기"
-      CZKE_unruly_minorities_2_desc:0 "Sdp는 카를로비바리 프로그램을 선언하고 독일민족의 민족 자결권을 요구했습니다."
+      CZKE_unruly_minorities_2_desc:0 "Sdp는 칼스바트 프로그램을 선언하고 독일민족의 민족 자결권을 요구했습니다."
       czke_karlsbad_program:0 " SdP가 과격하지는 않아."
     czke.5.t:0 "체코슬로바키아에게 인정받은 제 5열"
     czke.5.d:0 "뮌헨 협정 몇주전에, 히틀러는 뉘른베르크에서 열린 나치당 집회에서 체코슬로바키아 정부의 행동을 규탄하는 주데텐 위기에 관한 연설을 했습니다.\n\n히틀러는 체코슬로바키아를 국제법의 민족자결주의 강조를 위반하는 사기꾼이라고 비난하면서 독일인도, 슬로바키아인도, 헝가리인, 우크라이나인, 폴란드인도 모두 체코와 연합하기를 원하지 않는 체코 패권국이라고 주장했습니다.\n\nJust a week later the Führer ordered the establishment of Sudetendeutsches Freikorps, a paramilitary organization that took over the structure of Ordnersgruppe, an organization of ethnic-Germans in Czechoslovakia that had been dissolved by the Czechoslovak authorities due to its implication in large number of terrorist activities. The organization was sheltered, trained and equipped by German authorities and conducting cross border terrorist operations into Czechoslovak territory.\n\nMany ethnic-Germans refused to follow the Czechoslovak army mobilization order and either ran across the border to Germany and joined Freikorps, continuing cross border raids from there, or established Grün Freikorps units which were operating from Czechoslovak forests, receiving arms and equipment from Germany, and continuing raids against Czechoslovak authorities, Jews and Czechs, up until the German occupation of the Czechoslovak border areas following the Munich agreement."
@@ -84,7 +84,7 @@
       CZKE_fifth_column_2:0 "제 5열"
       CZKE_fifth_column_desc_2:0 "주데텐란트 독일인들의 의용병들이 체코슬로바키아에서 활동하고 있습니다."
     czke.6.t:0 "동원!"
-    czke.6.d:0 "Czechoslovak leadership rejects the British-French suggestion for Czechoslovakia to cede the Sudetenland to Germany.\n\nA state of emergency and general mobilization was declared soon after. The mobilization order applied to about 1,250,000 soldiers, which included reservists called up earlier for various exercises.\n\nResponse to the announcement of a general mobilization was extremely fast; first reservists reported for duty just a few minutes after hearing the decree from the radio and the influx of soldiers increased rapidly in following hours.\n\nDuring the night, the army took control and guarded key strategic buildings and military units reformed to war organization.\n\nCzechoslovakia was ready to defend its independence."
+    czke.6.d:0 "체코슬로바키아 정부는 체코슬로바키아가 주데텐란트를 독일에 양도할 것을 제안한 영국과 프랑스의 제안을 거부했습니다.\n\nA state of emergency and general mobilization was declared soon after. The mobilization order applied to about 1,250,000 soldiers, which included reservists called up earlier for various exercises.\n\nResponse to the announcement of a general mobilization was extremely fast; first reservists reported for duty just a few minutes after hearing the decree from the radio and the influx of soldiers increased rapidly in following hours.\n\nDuring the night, the army took control and guarded key strategic buildings and military units reformed to war organization.\n\nCzechoslovakia was ready to defend its independence."
     czke.6.a:0 "진실은 승리한다!"
       CZKE_mobilization_1938:0 "동원이다."
       CZKE_mobilization_1938_desc:0 "총동원령이 발표되었습니다.예비군들이 그들의 부대로 모이고 있습니다."
